--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,27 @@
 /* Design do site*/
 
+/* Background e fonte geral*/
 body {
-    background-image: url("/img/game-4664475_1920.jpg");
+    background-image: url("../img/game-4664475_1920.jpg");
     background-attachment: fixed;
     background-color: #cccccc;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: Arial, Helvetica, sans-serif;    
 }
 
+/* Título */
 div.title {
     align-items: center;
     justify-content: center;
 
     font-size: 35px;
     text-align: center;
+    color: #fff;
 }
 
+/* Opções de dados */
 div.form {
     align-items: center;
     justify-content: center;
@@ -34,8 +37,31 @@ div.form button {
     border-radius: 10px;
 
     color:#fff;
-    background-color: #11bbff;
+    background-color: #000;
 
     font-weight: bold;
 }
 
+/* Resultado da rolagem de dados*/
+div.result {
+    margin-top: 30px;
+
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+}
+
+/* Conteúdo */
+div.content {
+    color: #fff;
+
+    margin: 0px 35px;
+    padding-right: 60px;
+}
+
+/* Footer */
